# auv-software

./: .gitignore  .pre-commit-config.yaml  .yamlfmt  LICENSE  PROJECT_LOG_DEPTH.md  README.md  inference_worker.py  package-lock.json  plan.md  sim.repos  sim_test.py  temp  test_m.py  third_party.repos
auv_bringup/: CMakeLists.txt  package.xml
auv_bringup/cfg/: SmachParameters.cfg
auv_bringup/config/: cameras.yaml  cameras_taluy.yaml  cameras_taluy_mini.yaml  ekf.yaml  ekf2.yaml  ekf_global.yaml  ekf_mini.yaml  ekf_mti630.yaml  ekf_taluy.yaml  ekf_taluy_mini.yaml  ekf_vectornav.yaml  environment.yaml  gripper_control.yaml  gripper_test.rviz  taluy_mini_cameras.yaml  ukf.yaml  vn100.yaml
auv_bringup/launch/: cameras.launch  compare_filters.launch  gripper_control.launch  gripper_test.launch  logging.launch  nav.launch  param_server.launch  robosub.launch  robot_localization.launch  save_images.launch  start.launch  start_navigation.launch  tac_docking.launch  tac_sea.launch  tac_valve.launch
auv_bringup/scripts/: damping_calculator.py  environment_params_node.py  image_saver.py  smach_params_server.py
auv_cam/: CMakeLists.txt  package.xml
auv_cam/launch/: start_gst_camera.launch
auv_cam/src/: auv_camera_ros.cpp
auv_canbus_msgs/: CMakeLists.txt  package.xml
auv_canbus_msgs/msg/: DistanceMeasurement.msg  Geometry.msg  LatchedServo.msg  Pressure.msg  QuadDrivePulse.msg  SonarActivation.msg
auv_cmd_tools/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
auv_cmd_tools/env-hooks/: autocomplete.bash  autocomplete.zsh
auv_cmd_tools/scripts/: auv
auv_common_lib/: CMakeLists.txt  package.xml
auv_common_lib_ros2/: CMakeLists.txt  package.xml  setup.py
auv_control/auv_control/: CMakeLists.txt  package.xml  setup.py
auv_control/auv_controllers/: CMakeLists.txt  controller_plugins.xml  package.xml  setup.py
auv_description/auv_common_descriptions/: CMakeLists.txt  package.xml
auv_description/auv_description/: CMakeLists.txt  package.xml
auv_gym/: CMakeLists.txt  PHASE1_COMPLETE.md  README.md  package.xml  setup.py
auv_gym/auv_imitation_learning/: CMakeLists.txt  package.xml  setup.py
auv_gym/auv_reinforcement_learning/: CMakeLists.txt  README.md  package.xml  setup.py
auv_gym/config/: navigation.yaml  residual_control.yaml
auv_gym/launch/: auv_gym.launch  bridge_for_rl_training.launch  rl_training.launch  sim_for_rl_training.launch
auv_gym/scripts/: test_policy.py  train_end_to_end.py  train_navigation.py  train_residual_control.py
auv_localization/: CMakeLists.txt  package.xml
auv_localization/config/: calibration_data.yaml  default_calibration.yaml  sensor_calibration_data.yaml
auv_localization/launch/: start.launch
auv_localization/scripts/: dvl_odometry_node.py  imu_odometry_node.py  pressure_odometry_node.py
auv_localization/srv/: CalibrateIMU.srv
auv_msgs/: CMakeLists.txt  import holoocean.py  package.xml
auv_msgs/action/: FollowPath.action  MiniSlalom.action
auv_msgs/msg/: CanFrame.msg  DetectedPipe.msg  DetectedPipes.msg  Imu.msg  Keypoint.msg  KeypointResult.msg  LaneBoundaries.msg  MotorCommand.msg  ObjectDetection.msg  ObjectDetectionArray.msg  ObjectPose.msg  Pipe.msg  Pipes.msg  PropsYaw.msg  RLAction.msg  RLState.msg  RelativePoseCommand.msg  SegmentMeasurement.msg  SlalomProp.msg  SlalomTarget.msg  VisualFeature.msg  WaypointPath.msg  YawError.msg
auv_msgs/srv/: AlignFrame.srv  AlignFrameController.srv  ExecuteStateMachine.srv  PlanPath.srv  PoseBookmark.srv  RotateGripper.srv  SetAddedMassTarget.srv  SetDampingTarget.srv  SetDepth.srv  SetDetectionFocus.srv  SetFrameTarget.srv  SetIdRemap.srv  SetModelConfig.srv  SetObjectTransform.srv  SetObjectTransforms.srv  SetPremap.srv  SetScanEnabled.srv  SetWaypoint.srv  SpawnDebugCube.srv  VisualServoing.srv
auv_msgs_ros2/: CMakeLists.txt  package.xml
auv_msgs_ros2/action/: FollowPath.action
auv_msgs_ros2/msg/: EulerOrientation.msg  TDOA.msg
auv_msgs_ros2/srv/: AlignFrameController.srv  SetDepth.srv
auv_navigation/: CMakeLists.txt  package.xml
auv_navigation/auv_localization/: CMakeLists.txt  package.xml  setup.py
auv_navigation/auv_mapping/: CMakeLists.txt  package.xml
auv_navigation/auv_mission/: CMakeLists.txt  package.xml
auv_navigation/auv_navigation/: CMakeLists.txt  package.xml  setup.py
auv_navigation/auv_rl_navigation/: CMakeLists.txt  IMPLEMENTATION_STATUS.md  README.md  USAGE_GUIDE.md  package.xml  requirements.txt  setup.py
auv_navigation/launch/: start.launch
auv_navigation/scripts/: goal_to_path.py  path_follower.py
auv_nlp/: CMakeLists.txt  package.xml
auv_nlp/launch/: nlp_commander.launch
auv_nlp/scripts/: gen_cli.py  nlp_commander_node.py
auv_nlp/srv/: Execute.srv  Query.srv
auv_smach/: CMakeLists.txt  package.xml  setup.py
auv_smach/cfg/: MissionTargetSelection.cfg  SmachParameters.cfg  World.cfg
auv_smach/config/: bin.yaml  gate.yaml  general_smach_params.yaml  initialize.yaml  main_state_machine.yaml  mission_target_selection.yaml  octagon.yaml  pinger_mission_example.yaml  pinger_mission_sim.yaml  red_buoy.yaml  state_params.yaml  states.yaml  test_paths_example.yaml  torpedo.yaml
auv_smach/launch/: start.launch  test.launch  test_follow_waypoints.launch  test_pinger_mission.launch  test_smach.launch  test_valve.launch  valve_test.launch  valve_test_gt.launch  valve_test_realsense.launch
auv_smach/scripts/: environment_params_node.py  main_state_machine.py  smach_monitor_node.py  state_service_handler.py  test_follow_waypoints.py  test_pinger_mission.py  test_state_service.py  test_valve.py  valve_gripper_debug.py  valve_test.py
auv_software/: CMakeLists.txt  package.xml
auv_teleop/: CMakeLists.txt  README.md  package.xml
auv_teleop/config/: joy.yaml  ps5.yaml  wrench.yaml  xbox.yaml
auv_teleop/launch/: keyboard_teleop.launch  start_mini.launch  start_taluy_gui.launch  start_teleop.launch  telegram_telemetry.launch  web_gui.launch
auv_teleop/scripts/: command_thread.py  (+17 more)
auv_vision/: CMakeLists.txt  debug_slalom_segmentation_pipeline.py  package.xml  test_slalom_segmentation_pipeline.py
(+1076 files in other folders)
