<?xml version="1.0"?>
<package format="2">
  <name>auv_bringup</name>
  <version>0.1.0</version>
  <description>The auv_bringup package</description>

  <author email="senceryazici@gmail.com">Sencer Yazici</author>
  <maintainer email="senceryazici@gmail.com">Sencer Yazici</maintainer>

  <license>BSD-3-Clause</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xsens_mti_driver</exec_depend>
  <depend>ping360_sonar</depend>

  <export>

  </export>
</package>