<?xml version="1.0"?>
<package format="2">
  <name>auv_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package</description>
  <author email="senceryazici@gmail.com">Sencer Yazici</author>
  <maintainer email="senceryazici@gmail.com">Sencer Yazici</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>auv_control</exec_depend>
  <exec_depend>auv_control</exec_depend>
  <exec_depend>auv_control</exec_depend>
  <exec_depend>auv_localization</exec_depend>
  <exec_depend>auv_mapping</exec_depend>
  <exec_depend>auv_navigation</exec_depend>
  <exec_depend>mbf_costmap_nav</exec_depend>
  <exec_depend>move_base_flex</exec_depend>
  <exec_depend>ping360_sonar</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>xsens_mti_driver</exec_depend>
  <export/>
</package>
