<?xml version="1.0"?>
<package format="2">
  <name>auv_msgs</name>
  <version>0.1.0</version>
  <description>The auv_msgs package</description>
  <maintainer email="senceryazici@gmail.com">Sencer Yazici</maintainer>
  <author email="senceryazici@gmail.com">Sencer Yazici</author>
  <license>BSD-3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <export>
  </export>
</package>
