<?xml version="1.0"?>
<package format="2">
  <name>auv_navigation</name>
  <version>0.1.0</version>
  <description>The auv_navigation package</description>

  <author email="batuhanozer52@gmail.com">Batuhan Ozer</author>
  <maintainer email="batuhanozer52@gmail.com">Batuhan Ozer</maintainer>
  <license>BSD-3-Clause</license>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>auv_common_lib</depend>
  <depend>auv_controllers</depend>
  <depend>nav_msgs</depend>
  <depend>auv_msgs</depend>

</package>