<package format="2">
  <name>auv_nlp</name>
  <version>0.0.1</version>
  <description>NLP Commander for AUV using Google Gemini</description>
  <maintainer email="auv@itu.edu.tr">ITU AUV Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>auv_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- Python dependencies should be installed via pip -->
</package>
