<?xml version="1.0"?>
<package format="2">
  <name>auv_smach</name>
  <version>0.1.0</version>
  <description>The auv_smach package</description>
  <maintainer email="senceryazici@todo.todo">senceryazici</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>auv_navigation</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>rospy</depend>
  <depend>smach</depend>
  <export/>
</package>
