<?xml version="1.0"?>
<package format="2">
  <name>auv_software</name>
  <version>0.1.0</version>
  
  <description>The core software package for the auv project.</description>

  <author email="senceryazici@gmail.com">Sencer Yazici</author>
  <maintainer email="senceryazici@gmail.com">Sencer Yazici</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
