<?xml version="1.0"?>
<package format="2">
  <name>auv_software</name>
  <version>0.1.0</version>
  <description>The core software package for the auv project.</description>
  <author email="senceryazici@gmail.com">Sencer Yazici</author>
  <maintainer email="senceryazici@gmail.com">Sencer Yazici</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>auv_description</exec_depend>
  <exec_depend>auv_bringup</exec_depend>
  <exec_depend>auv_control</exec_depend>
  <exec_depend>auv_navigation</exec_depend>
  <exec_depend>auv_hardware</exec_depend>
  <exec_depend>auv_localization</exec_depend>
  <exec_depend>auv_smach</exec_depend>
  <exec_depend>auv_teleop</exec_depend>
  <exec_depend>auv_cam</exec_depend>
  <exec_depend>auv_vision</exec_depend>
  <export>

  </export>
</package>
