<?xml version="1.0"?>
<package format="2">
  <name>auv_teleop</name>
  <version>1.0.0</version>
  <description>This package consists of scripts for teleoperating the vehicle.</description>
  <maintainer email="senceryazici@gmail.com">Sencer Yazici</maintainer>
  <author email="senceryazici@gmail.com">Sencer Yazici</author>
  <license>BSD-3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>auv_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
