<?xml version="1.0"?>
<package format="2">
  <name>auv_vision</name>
  <version>0.1.0</version>
  <description>The auv_vision package</description>

  <maintainer email="t.ozanhakan@gmail.com">Ozan Hakan Tunca</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
