<?xml version="1.0"?>
<package format="2">
  <name>auv_control</name>
  <version>0.1.0</version>
  <description>The auv_control package</description>
  <author email="senceryazici@gmail.com">Sencer Yazici</author>
  <maintainer email="senceryazici@gmail.com">Sencer Yazici</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>auv_common_lib</depend>
  <depend>geometry_msgs</depend>
  <depend>auv_controllers</depend>
  <depend>pluginlib</depend>
  <depend>nav_msgs</depend>
  <depend>rosfmt</depend>
  <depend>auv_msgs</depend>
</package>
