<?xml version="1.0"?>
<package format="2">
  <name>auv_control</name>
  <version>0.1.0</version>
  <description>Main control pipeline package</description>
  <author email="senceryazici@gmail.com">Sencer Yazici</author>
  <maintainer email="senceryazici@gmail.com">Sencer Yazici</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>auv_common_lib</depend>
  <depend>auv_controllers</depend>
  <depend>auv_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rosfmt</depend>
  <depend>rospy</depend>
  <depend>tf2_ros</depend>
  <exec_depend>auv_description</exec_depend>
</package>
